# aloha-poc

./: .gitignore  README.md  pyproject.toml  run.sh  stop.sh
src/dropunit/: main.py  test_dropunit.py
src/logunit/: main.py  test_logging.py
src/reducerunit/: cache.py  main.py  test_reducer_unit.py
src/starunit/: main.py  test-btc.csv  test_star.py
